--- a/css/style.css
+++ b/css/style.css
@@ -364,8 +364,6 @@ footer .footer__logo img {
   background: transparent;
   border: 1px solid transparent;
   margin: 20px;
-}
-.btn-gradient a {
   border: 0;
   border-radius: 30px;
   background-image: linear-gradient(to top left, #9356DC, #FF79DA);
@@ -374,7 +372,7 @@ footer .footer__logo img {
   padding: 15px 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
-.btn-gradient a:hover {
+.btn-gradient:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
   background-image: linear-gradient(to top left, #985ede, #ff83dd);
 }
@@ -472,7 +470,8 @@ footer .footer__logo img {
 }
 
 .icheck {
-  font-size: 0;
+  font-size: 24px;
+  color: white;
 }
 
 .card-menu {
@@ -480,28 +479,25 @@ footer .footer__logo img {
   flex-direction: row;
   border-radius: 20px;
   height: 68px;
-  width: 320px;
+  width: 100%;
   overflow: hidden;
   align-items: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background-color: white;
   opacity: 0;
   animation: dish_anim 1s forwards;
+  justify-content: space-between;
 }
 .card-menu:hover .card-menu__check {
-  width: 80px;
-  height: 100%;
-  background-color: #99E2D0;
-  transform: translateX(0%);
+  width: 60px;
+  right: 0;
   overflow: hidden;
 }
 .card-menu:hover .icheck {
-  font-size: 24px;
-  color: white;
   animation: check_rotate 0.5s;
 }
 .card-menu:hover .card-menu__txt {
-  width: 50%;
+  width: 60%;
 }
 .card-menu:hover .card-menu__description {
   width: 80%;
@@ -512,18 +508,21 @@ footer .footer__logo img {
   justify-content: center;
   margin: 0;
   height: 100%;
-  width: 0;
+  width: 60px;
+  position: absolute;
+  right: -60px;
   background-color: #99E2D0;
   border-radius: 0 20px 20px 0;
-  transform-origin: 100% 50%;
-  transform: translateX(100%);
   transition: all 400ms ease;
 }
 .card-menu__description {
   display: flex;
   width: 100%;
+  padding-right: 10px;
+  box-sizing: border-box;
   justify-content: space-between;
-  align-content: center;
+  transition: all 400ms ease;
+  align-items: flex-end;
 }
 .card-menu__txt {
   display: flex;
@@ -531,9 +530,12 @@ footer .footer__logo img {
   width: 80%;
   padding: 10px 10px 10px 15px;
   margin: 0;
+  transition: all 400ms ease;
 }
 .card-menu__txt--dish {
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin: 5px 0 0 0;
 }
 .card-menu__txt--detail {
@@ -543,6 +545,7 @@ footer .footer__logo img {
   font-size: small;
 }
 .card-menu__price {
+  display: flex;
   width: 10%;
   align-self: flex-end;
   padding: 10px;
@@ -550,7 +553,7 @@ footer .footer__logo img {
 
 @keyframes check_rotate {
   from {
-    transform: rotate(-180deg);
+    transform: rotate(-360deg);
   }
   to {
     transform: rotate(0deg);
