--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -79,7 +79,8 @@
 }
 
 .icheck {
-    font-size: 0;
+    font-size: 24px;
+    color: white;
 
 }
 
@@ -88,33 +89,29 @@
     flex-direction: row;
     border-radius: 20px;
     height: 68px;
-    width: 320px;
+    width: 100%;
     overflow: hidden;
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     background-color: white;
     opacity: 0;
     animation: dish_anim 1s forwards;
-    //transition: all 400ms;
+    justify-content: space-between;
     &:hover {
         .card-menu__check {
-            width: 80px;
-            height: 100%;
-            background-color: $color-tertiary;
-            transform: translateX(0%);
-            //transform-origin: 0% 50%;
+            width: 60px;
+            right: 0;
             overflow: hidden;
         }
         .icheck {
-            font-size: 24px;
-            color: white;
             animation: check_rotate 0.5s;
         }
         .card-menu__txt {
-            width: 50%;
+            width: 60%; //50%
         }
         .card-menu__description {
             width: 80%;
+
         }
     }
     &__check {
@@ -123,28 +120,34 @@
         justify-content: center;
         margin: 0;
         height: 100%;
-        width: 0;
+        width: 60px;
+        position: absolute;
+        right: -60px;
         background-color: $color-tertiary;
         border-radius: 0 20px 20px 0;
-        transform-origin: 100% 50%;
-        transform: translateX(100%);
         transition: all 400ms ease;
     }
     &__description {
         display: flex;
         width: 100%;
+        padding-right: 10px;
+        box-sizing: border-box;
         justify-content: space-between;
-        align-content: center;
+        transition: all 400ms ease;
+        align-items: flex-end;
         
     }
     &__txt {
         display: flex;
         flex-direction: column;
-        width: 80%;
+        width: 80%; //70%
         padding: 10px 10px 10px 15px;
         margin: 0;
+        transition: all 400ms ease;
         &--dish {
             white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;    
             margin: 5px 0 0 0;
         }
         &--detail {
@@ -155,6 +158,7 @@
         }
     }
     &__price {
+        display: flex;
         width: 10%;
         align-self: flex-end;
         padding: 10px;
@@ -163,7 +167,7 @@
 
 @keyframes check_rotate{
 	from {
-        transform: rotate(-180deg)
+        transform: rotate(-360deg)
     }
     to {
 		transform: rotate(0deg)
