--- a/sass/base/_typo.scss
+++ b/sass/base/_typo.scss
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400&family=Shrikhand&display=swap');
 
+html {
+    overflow-x: hidden;
+}
 
 body{
     font-family: Roboto, Arial, serif;
     padding: 0;
     margin: 0;
-    width: 100%;
+    //width: 100%;
+    //overflow-x: hidden;
 }
 
 h1 {
