--- a/sass/base/_typo.scss
+++ b/sass/base/_typo.scss
@@ -9,8 +9,8 @@ body{
     font-family: Roboto, Arial, serif;
     padding: 0;
     margin: 0;
-    //width: 100%;
-    //overflow-x: hidden;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 h1 {
