--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,7 @@ footer .footer__logo img {
   }
 }
 
-.material-symbols-rounded {
+.ifoot {
   margin-right: 5px;
   width: 15px;
   font-size: 16px;
